[package]
name = "martinkozle-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
env_logger = "0.9.0"
log = "0.4.16"
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.17.0", features = ["full"] }
